# TinyTensor-

./: .gitignore  LICENSE  README.md  interactive.cpp  readme.md  分工.md  说明.md
Tensor/: CMakeLists.txt  interactive.cpp  main.cpp  tensor.hpp  tests.cpp
output/: circle_boundary.ppm  circle_data.csv  circle_loss.csv  circle_loss_curve.ppm  xor_boundary.ppm  xor_data.csv  xor_loss.csv  xor_loss_curve.ppm
visualization/: CMakeLists.txt  image_writer.hpp  live_window.hpp  plot.hpp  train_and_export.cpp  train_live.cpp
